--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -117,6 +117,7 @@ general:
             ['scripts/setup_test_pathpipe_environment.sh', 'pathdev_bin'   ],
             ['scripts/concatgff.sh',                       'pathdev_bin'   ],
             ['scripts/tmhmm_chado',                        'production_bin'],
+            ['scripts/chado',                              'production_bin'],
             ['scripts/writedb_entry',                      'production_bin'],
             ['scripts/chado_dump_transcripts',             'production_bin'],
             ['scripts/iprscan_chado',                      'production_bin'],
