--- a/config/production/global.yml
+++ b/config/production/global.yml
@@ -14,6 +14,7 @@ directories:
   preproduction_bin: '/software/pathogen/internal/preprod/bin'
   preproduction_lib: '/software/pathogen/internal/preprod/lib'
   production_java:   '/software/pathogen/internal/pathdev/java'
+  production_etc:    '/software/pathogen/etc'
   documentation:     '/nfs/WWWdev/INTWEB_docs/htdocs/Teams/Team81/docs'
 
 application_locations:
