--- a/config/production/global.yml
+++ b/config/production/global.yml
@@ -15,6 +15,7 @@ directories:
   preproduction_lib: '/software/pathogen/internal/preprod/lib'
   production_java:   '/software/pathogen/internal/pathdev/java'
   production_etc:    '/software/pathogen/etc'
+  production_genedb  '/nfs/pathdb/bin'
   documentation:     '/nfs/WWWdev/INTWEB_docs/htdocs/Teams/Team81/docs'
 
 application_locations:
