Updated mapping for python modules
Util and GFFminimal for JBrowse

--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -13,10 +13,21 @@ general:
             ['scripts/writedb_entries.py',              'production_bin'],
             ['scripts/fastn2gc.py',                     'production_bin'],
             ['scripts/mh12_utils.py',                   'production_bin'],
-            ['scripts/fastn.py',    	                  'production_bin'],
+            ['scripts/fastn.py',    	                'production_bin'],
             ['scripts/fastn_split.py',                	'production_bin'],
-            ['scripts/get_sequencing_project_pages.py',    'production_bin'],
-            ['modules/wikipy.py',                       'production_lib'],  
+            ['scripts/get_sequencing_project_pages.py', 'production_bin'],
+            ['modules/wikipy.py',                       'production_lib'],
+	    ['modules/util/options.py',			'production_lib'],
+	    ['modules/util/password.py',                'production_lib'],
+	    ['modules/util/logconfig.py',               'production_lib'],
+	    ['modules/util/dictconfig.py',              'production_lib'],
+	    ['modules/util/__init__.py',                'production_lib'],
+	    ['modules/gffminimal/api.py',               'production_lib'],
+	    ['modules/gffminimal/business.py',          'production_lib'],
+	    ['modules/gffminimal/format.py',            'production_lib'],
+	    ['modules/gffminimal/gffmini.py',           'production_lib'],
+	    ['modules/gffminimal/__init__.py',          'production_lib'],
+	    ['modules/gffminimal/model.py',             'production_lib'],
         ]
   
   perl: [
