--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -17,11 +17,10 @@ general:
             ['scripts/fastn_split.py',                	'production_bin'],
             ['scripts/get_sequencing_project_pages.py', 'production_bin'],
             ['modules/wikipy.py',                       'production_lib'],
-	    ['modules/util/options.py',			'production_lib'],
-	    ['modules/util/password.py',                'production_lib'],
-	    ['modules/util/logconfig.py',               'production_lib'],
-	    ['modules/util/dictconfig.py',              'production_lib'],
-	    ['modules/util/__init__.py',                'production_lib'],
+	    ['modules/options.py',			'production_lib'],
+	    ['modules/password.py',                     'production_lib'],
+	    ['modules/logconfig.py',                    'production_lib'],
+	    ['modules/dictconfig.py',                   'production_lib'],
 	    ['modules/gffminimal/api.py',               'production_lib'],
 	    ['modules/gffminimal/business.py',          'production_lib'],
 	    ['modules/gffminimal/format.py',            'production_lib'],
