--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -17,16 +17,8 @@ general:
             ['scripts/fastn_split.py',                	'production_bin'],
             ['scripts/get_sequencing_project_pages.py', 'production_bin'],
             ['modules/wikipy.py',                       'production_lib'],
-	    ['modules/options.py',			'production_lib'],
-	    ['modules/password.py',                     'production_lib'],
-	    ['modules/logconfig.py',                    'production_lib'],
-	    ['modules/dictconfig.py',                   'production_lib'],
-	    ['modules/gffminimal/api.py',               'production_lib'],
-	    ['modules/gffminimal/business.py',          'production_lib'],
-	    ['modules/gffminimal/format.py',            'production_lib'],
-	    ['modules/gffminimal/gffmini.py',           'production_lib'],
-	    ['modules/gffminimal/__init__.py',          'production_lib'],
-	    ['modules/gffminimal/model.py',             'production_lib'],
+	    ['modules/util',				'production_lib'],
+	    ['modules/gffminimal',   	                'production_lib'],
         ]
   
   perl: [
