--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -21,7 +21,7 @@ general:
 	    ['modules/gffminimal',   	                'production_lib'],
 	    ['modules/ropy',				'production_lib'],
         ]
-  
+
   perl: [
             ['scripts/fastq_to_fasta',                'production_bin'],
             ['scripts/merge_rnaseq_expression_spreadsheets.pl', 'pathdev_bin'],
@@ -29,7 +29,7 @@ general:
             ['scripts/tradis_merge_plots',            'production_bin'],
             ['scripts/validate_multi_fasta_alignment','production_bin'],
             ['scripts/tradis_gene_insert_sites',      'production_bin'],
-            ['scripts/backup_documents.pl',           'pathdev_bin'   ], 
+            ['scripts/backup_documents.pl',           'pathdev_bin'   ],
             ['scripts/populate_organisms.pl',         'pathdev_bin'   ],
             ['scripts/rt_report',                     'pathdev_bin'   ],
             ['scripts/update_lustre_ref_genomes.pl',  'pathdev_bin'   ],
@@ -38,8 +38,8 @@ general:
             ['scripts/fetch_references.pl',           'pathdev_bin'   ],
             ['scripts/list_used_references.pl',       'pathdev_bin'   ],
             ['scripts/reads_analysis.pl',             'pathdev_bin'   ],
-            ['scripts/set_orgprops.pl',               'pathdev_bin'   ],    
-            ['scripts/check_aux_files.pl',            'pathdev_bin'   ],  
+            ['scripts/set_orgprops.pl',               'pathdev_bin'   ],
+            ['scripts/check_aux_files.pl',            'pathdev_bin'   ],
             ['scripts/num_lanes_in_pipelines',        'pathdev_bin'   ],
             ['scripts/forecast_sequencing_data.pl',   'pathdev_bin'   ],
             ['scripts/ena_submissions_update.pl',     'pathdev_bin'   ],
@@ -49,6 +49,7 @@ general:
             ['scripts/scaffold_perl_application.pl',  'pathdev_bin'   ],
             ['scripts/create_blast_dbs_from_annotation_pipeline',  'pathdev_bin'   ],
             ['scripts/rebalance_disks',               'pathdev_bin'   ],
+            ['scripts/pacbio_assemble_smrtanalysis-2.0.1',                       'production_bin'],
             ['scripts/reffind',                       'production_bin'],
             ['scripts/whereismydata',                 'production_bin'],
             ['scripts/submission_lookup',             'production_bin'],
@@ -84,7 +85,7 @@ general:
             ['scripts/blast2tab.pl',                  'production_bin'],
             ['scripts/sequence_search.pl',            'production_bin'],
             ['scripts/omcl2genedb.pl',                'production_bin'],
-            ['modules/GoogleDocument.pm',             'production_lib'],  
+            ['modules/GoogleDocument.pm',             'production_lib'],
             ['modules/GoogleDocumentHelper.pm',       'production_lib'],
             ['scripts/contigs2fas.pl',                'production_bin'],
             ['scripts/validate_embl.pl',              'production_bin'],
@@ -108,10 +109,10 @@ general:
             ['scripts/select_gene_sequences.pl',      'production_bin'],
         ]
   java: [ ["googlecode.jar", "production_java"] ]
-  
+
   c: [[ "bin/assembly_stats", 'production_bin']]
   r: [[ "scripts/tradis_essentiality.R", 'production_bin']]
-  
+
   shell: [
             ['scripts/genus_genbank_to_blast',             'pathdev_bin'   ],
             ['scripts/refseq_blast_databases',             'pathdev_bin'   ],
@@ -150,13 +151,13 @@ general:
             ['scripts/profile.pathogen',                   'production_etc'],
             ['scripts/cshrc.pathogen',                     'production_etc'],
             ['scripts/elasticsearch-cluster-control',      'production_genedb'],
-            ['scripts/genedb-web-control',                 'production_genedb'],            
-            ['scripts/hazelcast-cluster-control',          'production_genedb'],     
-            ['scripts/omixed-web-control',                 'production_genedb'],            
-            ['scripts/push-staging-to-snapshot2',          'production_genedb'],     
-            ['scripts/copy_and_restart_genedb',            'production_genedb'],       
-            ['scripts/fix-nightly',                        'production_genedb'],                   
-            ['scripts/fix-snapshot',                       'production_genedb'],                  
+            ['scripts/genedb-web-control',                 'production_genedb'],
+            ['scripts/hazelcast-cluster-control',          'production_genedb'],
+            ['scripts/omixed-web-control',                 'production_genedb'],
+            ['scripts/push-staging-to-snapshot2',          'production_genedb'],
+            ['scripts/copy_and_restart_genedb',            'production_genedb'],
+            ['scripts/fix-nightly',                        'production_genedb'],
+            ['scripts/fix-snapshot',                       'production_genedb'],
             ['scripts/fix-staging',                        'production_genedb'],
 
 	    ['scripts/db_info',         'production_bin'],
