Adding mapping for writedb_entry_set

--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -20,6 +20,7 @@ general:
 	    ['modules/util',				'production_lib'],
 	    ['modules/gffminimal',   	                'production_lib'],
 	    ['modules/ropy',				'production_lib'],
+	    ['modules/writedb_entry_set',		'production_lib'],
         ]
   
   perl: [
