fasta manipulation scripts

--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -30,6 +30,8 @@ general:
             ['scripts/tradis_merge_plots',            'production_bin'],
             ['scripts/validate_multi_fasta_alignment','production_bin'],
             ['scripts/tradis_gene_insert_sites',      'production_bin'],
+	    ['scripts/count_ns_in_alignment',         'production_bin'],
+            ['scripts/exclude_sequences_from_fasta',  'production_bin'],
             ['scripts/backup_documents.pl',           'pathdev_bin'   ],
             ['scripts/populate_organisms.pl',         'pathdev_bin'   ],
             ['scripts/rt_report',                     'pathdev_bin'   ],
