--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -55,6 +55,7 @@ general:
             ['scripts/pacbio_assemble_smrtanalysis-2.0.1',                       'production_bin'],
             ['scripts/reffind',                       'production_bin'],
             ['scripts/whereismydata',                 'production_bin'],
+            ['scripts/extract_region_from_multifasta', 'production_bin'],
             ['scripts/submission_lookup',             'production_bin'],
             ['scripts/pathfind',                      'production_bin'],
             ['scripts/annotationfind',                'production_bin'],
