--- a/config/production/global.yml
+++ b/config/production/global.yml
@@ -2,7 +2,7 @@ general:
   repository:
     url: 'git+ssh://git.internal.sanger.ac.uk/repos/git/pathogens/general.git'
     branch: 'farm3'
-  directories_to_build: ['java','perl','python','shell','c','splimer','r']
+  directories_to_build: ['java','perl','python','shell','c','splimer','r','data']
 
 checkout_directory: "/tmp"
 
@@ -16,6 +16,7 @@ directories:
   production_java:   '/software/pathogen/internal/pathdev/java'
   production_etc:    '/software/pathogen/etc'
   production_genedb: '/nfs/pathdb/bin'
+  production_adapters: '/lustre/scratch108/pathogen/pathpipe/usr/share'
   documentation:     '/nfs/WWWdev/INTWEB_docs/htdocs/Teams/Team81/docs'
 
 application_locations:
