--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -53,7 +53,7 @@ general:
       [ 'scripts/scaffold_perl_application.pl',              'pathdev_bin' ],
       [ 'scripts/create_blast_dbs_from_annotation_pipeline', 'pathdev_bin' ],
       [ 'scripts/rebalance_disks',                           'pathdev_bin' ],
-      [ 'scripts/pacbio_assemble_smrtanalysis-2.0.1',        'production_bin' ],
+      [ 'scripts/pacbio_assemble_smrtanalysis',              'production_bin' ],
       [ 'scripts/identify_protein_changes_at_position',      'production_bin' ],
       [ 'scripts/reffind',                                   'production_bin' ],
       [ 'scripts/whereismydata',                             'production_bin' ],
@@ -117,11 +117,11 @@ general:
       [ 'scripts/cshrc_to_bash.pl',                          'pathdev_bin' ],
       [ 'scripts/infofind',                                  'production_bin' ],
       [ 'scripts/select_gene_sequences.pl',                  'production_bin' ],
-    ] 
+    ]
   java: [ [ "googlecode.jar", "production_java" ] ]
   
-  c: [ [ "bin/assembly_stats",             'production_bin' ] ] 
-  r: [ [ "scripts/tradis_essentiality.R",  'production_bin' ] ] 
+  c: [ [ "bin/assembly_stats",             'production_bin' ] ]
+  r: [ [ "scripts/tradis_essentiality.R",  'production_bin' ] ]
   data: [ [ 'adapters/solexa-adapters.fasta', 'production_etc' ], [ 'adapters/solexa-adapters.quasr', 'production_etc' ], ]
   
   shell: [
@@ -174,6 +174,6 @@ general:
   
       [ 'scripts/db_info',      'production_bin' ],
       [ 'scripts/run_jspecies', 'production_bin' ]
-    ] 
-  splimer: [ [ 'splimer.pl', 'production_bin' ], [ 'modules/FastaLength.pm', 'production_lib' ], 
+    ]
+  splimer: [ [ 'splimer.pl', 'production_bin' ], [ 'modules/FastaLength.pm', 'production_lib' ],
   ]
