Added DaemonsLog to production mapping

--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -120,6 +120,7 @@ general:
       [ 'scripts/cshrc_to_bash.pl',                                  'pathdev_bin' ],
       [ 'scripts/select_gene_sequences.pl',                          'production_bin' ],
       [ 'scripts/get_GO_association.pl',                             'production_bin'],
+      [ 'modules/DaemonsLog',                                        'production_lib' ]
   ]
 
   java: [ 
