--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -122,6 +122,7 @@ general:
       [ 'modules/DaemonsLog',                                        'production_lib' ],
       [ 'scripts/dotplot.pl',                                        'production_bin'],
       [ 'scripts/orthomcl2tab.pl',                                   'production_bin'],
+      [ 'modules/Crawl',                                             'production_lib' ],
   ]
 
   java: [ 
