--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -21,6 +21,7 @@ general:
       [ 'modules/gffminimal',                      'production_lib' ],
       [ 'modules/ropy',                            'production_lib' ],
       [ 'modules/writedb_entry_set',               'production_lib' ],
+      [ 'modules/crawl',                           'production_lib' ],
   ]
   
   perl: [
