--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -125,6 +125,7 @@ general:
       [ 'scripts/orthomcl2tab.pl',                                   'production_bin'],
       [ 'modules/Crawl',                                             'production_lib' ],
       [ 'scripts/pfamscan2tab_chado.pl',                             'production_bin'],
+      [ 'scripts/find_untracked_studies.pl',                         'pathdev_bin' ],
   ]
 
   java: [ 
