Added prosite_by_perl.pl script to prod bin

--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -126,6 +126,7 @@ general:
       [ 'modules/Crawl',                                             'production_lib' ],
       [ 'scripts/pfamscan2tab_chado.pl',                             'production_bin'],
       [ 'scripts/find_untracked_studies.pl',                         'pathdev_bin' ],
+      [ 'scripts/prosite_by_perl.pl',                                'production_bin' ],
   ]
 
   java: [ 
