--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -129,6 +129,7 @@ general:
       [ 'scripts/find_untracked_studies.pl',                         'pathdev_bin' ],
       [ 'scripts/prosite_by_perl.pl',                                'production_bin' ],
       [ 'scripts/trna-se.pl',                                        'production_bin' ],
+      [ 'scripts/rfamscan_dechunk.pl',                               'production_bin' ],
   ]
 
   java: [ 
