Added cogblast.pl to prod bin

--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -132,6 +132,7 @@ general:
       [ 'scripts/trna-se.pl',                                        'production_bin' ],
       [ 'scripts/rfamscan_dechunk.pl',                               'production_bin' ],
       [ 'scripts/run_beast.pl',                                      'production_bin' ],
+      [ 'scripts/cogblast.pl',                                       'production_bin' ],
   ]
 
   java: [ 
