Added scout_wrapper.pl to prod bin and auto_update_go_terms.pl to pathdev bin

--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -134,6 +134,8 @@ general:
       [ 'scripts/run_beast.pl',                                      'production_bin' ],
       [ 'scripts/cogblast.pl',                                       'production_bin' ],
       [ 'scripts/reciprocal_fasta.pl',                               'production_bin' ],
+      [ 'scripts/scout_wrapper.pl',                                  'production_bin' ],
+      [ 'scripts/auto_update_go_terms.pl',                           'pathdev_bin' ],
   ]
 
   java: [ 
