Added NCTC tab generation script

--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -137,6 +137,7 @@ general:
       [ 'scripts/scout_wrapper.pl',                                  'production_bin' ],
       [ 'scripts/auto_update_go_terms.pl',                           'pathdev_bin' ],
       [ 'scripts/interpro_to_chado_load',                            'production_bin' ],
+      [ 'scripts/generate_nctc_tab.pl',                              'pathdev_bin' ],
   ]
 
   java: [ 
