--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -23,6 +23,7 @@ general:
       [ 'modules/writedb_entry_set',               'production_lib' ],
       [ 'modules/crawl',                           'production_lib' ],
       [ 'scripts/rm_pathpipe_tmp.py',              'pathdev_bin'],
+      [ 'scripts/report_large_files.py',           'pathdev_bin'],
   ]
   
   perl: [
