added a new shell environment script for pathdb to be able to manage the pathPAN

--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -211,13 +211,14 @@ general:
       [ 'scripts/copy_and_restart_genedb',            'production_genedb' ],
       [ 'scripts/fix-nightly',                        'production_genedb' ],
       [ 'scripts/fix-snapshot',                       'production_genedb' ],
-      [ 'scripts/fix-staging',                        'production_genedb' ],
-      [ 'scripts/db_info',      'production_bin' ],
-      [ 'scripts/run_jspecies', 'production_bin' ],
-      [ 'scripts/path-user-code-find.sh',	 'production_bin' ],
-      [ 'scripts/chado_run_iprscan',                  'production_bin' ],
-      [ 'scripts/chado_convert_load_iprscan',         'production_bin' ],
-      [ 'scripts/run_haploview',                      'production_bin' ]
+      [ 'scripts/fix-staging',			      'production_genedb' ],
+      [ 'scripts/db_info',			      'production_bin' ],
+      [ 'scripts/run_jspecies',			      'production_bin' ],
+      [ 'scripts/path-user-code-find.sh',	      'production_bin' ],
+      [ 'scripts/chado_run_iprscan',		      'production_bin' ],
+      [ 'scripts/chado_convert_load_iprscan',	      'production_bin' ],
+      [ 'scripts/run_haploview',		      'production_bin' ],
+      [ 'scripts/pinto_pathdb_environment_setup.sh',  'pathdev_bin' ]
   ]
   splimer: [ [ 'splimer.pl', 'production_bin' ], [ 'modules/FastaLength.pm', 'production_lib' ],
   ]
