Added missing comma

--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -16,7 +16,7 @@ general:
       [ 'scripts/fastn.py',                        'production_bin' ],
       [ 'scripts/fastn_split.py',                  'production_bin' ],
       [ 'scripts/get_sequencing_project_pages.py', 'production_bin' ],
-      [ 'scripts/snp_sites_plink_files.py',        'production_bin' ]
+      [ 'scripts/snp_sites_plink_files.py',        'production_bin' ],
       [ 'modules/wikipy.py',                       'production_lib' ],
       [ 'modules/util',                            'production_lib' ],
       [ 'modules/gffminimal',                      'production_lib' ],
