--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -144,7 +144,7 @@ general:
       [ 'scripts/transfer_genes.pl',                                 'production_bin' ],
       [ 'scripts/transfer_ids_to_EMBL.pl',                           'production_bin' ],
       [ 'scripts/extract_modifications_to_plots',                    'production_bin' ],
-      [ 'scripts/get_library_type.pl',                               'pathdev_bin' ],
+      [ 'scripts/get_library_type.pl',                               'production_bin' ],
   ]
 
   java: [
