--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -224,7 +224,8 @@ general:
       [ 'scripts/run_haploview',		      'production_bin' ],
       [ 'scripts/pinto_pathdb_environment_setup.sh',  'pathdev_bin' ],
       [ 'scripts/mash',                               'production_bin' ],
-      [ 'scripts/backup_midas_audit_logs.sh',         'pathdev_bin' ]
+      [ 'scripts/backup_midas_audit_logs.sh',         'pathdev_bin' ],
+      [ 'scripts/phylosift',                          'production_bin' ]
   ]
   splimer: [ [ 'splimer.pl', 'production_bin' ], [ 'modules/FastaLength.pm', 'production_lib' ],
   ]
